<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Easy Finance</string>
    <string name="change">Change</string>
    <string name="required">Required</string>
    <string name="settings">Settings</string>
    <string name="type_description">Description of type</string>
    <string name="delete">Delete</string>
    <string name="nav_drawer_close">Closing menu</string>
    <string name="nav_drawer_open">Opening menu</string>
    <string name="username">Username</string>
    <string name="new_registry">New</string>
    <string name="save_registry">Save</string>
    <string name="about">About</string>
    <string name="type">Type</string>
    <string name="dashboard">Dashboard</string>
    <string name="expenses">Expenses</string>
    <string name="expense_date">Expense date</string>
    <string name="spending_due_date">Spending due date</string>
    <string name="type_expense">Type of expense</string>
    <string name="spending_value">Spending value</string>
    <string name="amount_revenue">Amount of revenue</string>
    <string name="type_income">Type of income</string>
    <string name="relation_income_expense">Relation between income and expense</string>
    <string name="incomes">Incomes</string>
    <string name="description_revenue">Description of revenue</string>
    <string name="description_expense">Description of expense</string>
    <string name="due_date_revenue">Due date revenue</string>
    <string name="revenue_date">Revenue date</string>
    <string name="developers">Developers</string>
    <string name="libraries">Libraries</string>
    <string name="user_preferences">User Preferences</string>
    <string name="preference_dialog_username">Insert your username</string>
    <string name="thanks">Thanks</string>
    <string name="panel_chart_balance">Balance</string>
    <string name="panel_income_vs_expense">Income VS Expense</string>
    <string name="ok" translatable="false">OK</string>
    <string name="error">Error</string>
    <string name="initial_date">Initial Date</string>
    <string name="final_date">Final date</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    <string name="danger">Danger</string>
    <string name="dialog_select_params">Select params to build a chart</string>
    <string name="exception_chart_initial_date_less_or_equal">Initial Date must be less or equal to final date</string>
    <string name="exception_chart_no_data">There\'s no data to show in the graph</string>
    <string name="exception_chart_initial_date_invalid">Initial date invalid</string>
    <string name="exception_chart_final_date_invalid">Final date invalid</string>
    <string name="exception_unable_delete_this_has_registries">Unable to delete, has registries that depends on this</string>
    <string name="exception_delete_entity">Have registries that depends on this type</string>
    <string name="chart_expenses_by_type">Expenses Chart By Type</string>
    <string name="chart_incomes_by_type">Income Chart By Type</string>
    <string name="final_value">Total Value</string>
    <string name="none">None</string>
    <string name="select_expense_type">Select expense type</string>
    <string name="panel_simple">Simple Panel</string>
    <string name="tipo_despesa">Tipo de Despesa</string>
    <string name="tipo_receita">Tipo de Receita</string>
    <string name="pesquisar">Pesquisar</string>
</resources>