<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <Spinner
                android:id="@+id/spn_tipo_despesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:spinnerMode="dialog"/>

            <br.com.extractor.easyfinance.arquitetura.ui.widget.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edt_descricao_despesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_expense"
                    android:inputType="textCapSentences"/>

            </br.com.extractor.easyfinance.arquitetura.ui.widget.CustomTextInputLayout>

            <br.com.extractor.easyfinance.arquitetura.ui.widget.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edt_valor_despesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/spending_value"
                    android:inputType="number|numberDecimal|numberSigned"/>

            </br.com.extractor.easyfinance.arquitetura.ui.widget.CustomTextInputLayout>

            <br.com.extractor.easyfinance.arquitetura.ui.widget.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edt_data_despesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/expense_date"
                    android:inputType="date"/>

            </br.com.extractor.easyfinance.arquitetura.ui.widget.CustomTextInputLayout>

            <br.com.extractor.easyfinance.arquitetura.ui.widget.CustomTextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edt_data_vencimento_despesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/spending_due_date"
                    android:inputType="date"/>

            </br.com.extractor.easyfinance.arquitetura.ui.widget.CustomTextInputLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/salvar_despesa"
        style="@style/FloatActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_done"/>

</RelativeLayout>